--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.13.1",
     "quill": "^1.3.6",
     "react": "^16.13.1",
+    "react-activestorage-provider": "^0.8.0",
     "react-dom": "^16.13.1",
     "react-dropzone-component": "^3.2.0",
     "react-redux": "^7.2.0",
